--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,12 +1,19 @@
 .filterTittle {
     font-size: 24px;
+    margin: 8px ;
 }
 
 .input {
     display: block;
-    margin-bottom: 18px;
-    font-size: 20px;
-    padding: 8px;
-    width: 320px;
+    margin-bottom: 12px;
+    font-size: 16px;
+    max-width: 320px;
+    padding: 4px 8px;
+    border-radius: 4px;
+    border: solid 1px black;
 
+}
+
+.input:hover {
+    border: solid 1px rgb(94, 94, 212);
 }
