--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,33 +1,47 @@
 .form{
    
     border: 1px solid black;
-    width: 360px;
+    max-width: 260px;
+    border-radius: 6px;
     padding: 24px;
     
 }
 
 .label{
     display: block;
-    font-size: 24px;
+    font-size: 18px;
+    font-weight: bolder;
 }
 
 .input{
     display: block;
-    margin-bottom: 18px;
-    font-size: 20px;
-    padding: 8px;
-    width: 320px;
+    margin-bottom: 12px;
+    font-size: 16px;
+    max-width: 320px;
+    padding: 4px 8px;
+    border-radius: 4px;
+    border: solid 1px black;
 
+}
+
+.input:hover{
+    border: solid 1px rgb(94, 94, 212);
 }
 
 .button{
-    display: block;
-    padding: 8px;
-    font-size: 16px;
+    padding: 6px 12px;
+    font-size: 18px;
+    
+    background-color: rgb(94, 94, 212);
+    font-weight: bold;
+    color: aliceblue;
+    border: solid 1px black;
+    box-shadow: 0px 2px 3px 1px rgb(0, 0, 0, 0.5);
+    border-radius: 5px;
+    transition: transform 0.5s;
 }
 
 .button:hover{
-    background-color: rgb(67, 24, 184);
-    color: white;
+    transform: scale(1.01);
 
 }
